// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base rendering tests renders correctly App with default Styled 1`] = `
<div
  className="div-8-0-1-9"
>
  <header
    className="header-9-0-1-10"
  >
    <h1
      className="h1-12-0-1-11"
    >
      Title
    </h1>
  </header>
  <section
    className="section-10-0-1-12"
    data-name="content"
  >
    <button
      className="button-13-0-1-13"
    >
      primitive test
    </button>
    <button
      className="button-14-0-1-14"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-11-0-1-15"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with default styled 1`] = `
<div
  className="div-1-0-1-1"
>
  <header
    className="header-2-0-1-2"
  >
    <h1
      className="h1-5-0-1-3"
    >
      Title
    </h1>
  </header>
  <section
    className="section-3-0-1-4"
    data-name="content"
  >
    <button
      className="button-6-0-1-5"
    >
      primitive test
    </button>
    <button
      className="button-7-0-1-6"
    >
      dynamic primitive test
    </button>
  </section>
  <section
    className="section-4-0-1-7"
  >
    Another section
  </section>
</div>
`;

exports[`base rendering tests renders correctly App with injectStyled 1`] = `
<div
  className="root-0-1-16"
>
  <div
    className="div-15-0-1-18"
  >
    <header
      className="header-16-0-1-19"
    >
      <h1
        className="h1-19-0-1-20"
      >
        Title
      </h1>
    </header>
    <section
      className="section-17-0-1-21"
      data-name="content"
    >
      <button
        className="button-20-0-1-22"
      >
        primitive test
      </button>
      <button
        className="button-21-0-1-23"
      >
        dynamic primitive test
      </button>
    </section>
    <section
      className="section-18-0-1-24"
    >
      Another section
    </section>
  </div>
</div>
`;

exports[`base rendering tests renders nested compositions correctly 1`] = `
<div
  className="C1-23-0-1-25"
>
  Test
</div>
`;
